--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+# apple
+.DS_Store
+
 # Bower dependency directory (https://bower.io/)
 bower_components
 
@@ -59,3 +62,6 @@ typings/
 
 # next.js build output
 .next
+
+# vscode
+.vscode
