--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "url": "git+https://github.com/devdeskqueue/Back-End.git"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "dotenv": "^8.0.0",
+    "express": "^4.16.4",
+    "knex": "^0.19.0",
+    "pg": "^7.11.0",
+    "sqlite3": "^4.0.9"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.2",
@@ -22,8 +26,9 @@
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.17.3",
     "jest": "^23.6.0",
-    "supertest": "^3.3.0",
-    "prettier": "^1.18.2"
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
+    "supertest": "^3.3.0"
   },
   "author": "Louis Magdaleno & Wilfred Morgan",
   "license": "MIT",
