--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.17.3",
     "jest": "^23.6.0",
+    "knex-cleaner": "^1.2.1",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
     "supertest": "^3.3.0"
