--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "jest ./test/test.js",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,8 @@
     "express": "^4.16.4",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.19.0"
+    "knex": "^0.19.0",
+    "sqlite3": "^4.0.9"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.2",
