--- a/package.json
+++ b/package.json
@@ -7,21 +7,18 @@
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "jest ./test/test.js",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/devdeskqueue/Back-End.git"
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "helmet": "^3.18.0",
-    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.0",
+    "pg": "^7.11.0",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
@@ -30,6 +27,8 @@
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.17.3",
     "jest": "^23.6.0",
+    "knex-cleaner": "^1.2.1",
+    "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
     "supertest": "^3.3.0"
   },
