--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "helmet": "^3.18.0",
     "knex": "^0.19.0",
     "pg": "^7.11.0",
     "sqlite3": "^4.0.9"
