--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.0",
     "pg": "^7.11.0",
     "sqlite3": "^4.0.9"
