--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.0",
+    "morgan": "^1.9.1",
     "pg": "^7.11.0",
     "sqlite3": "^4.0.9"
   },
