--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
-    "test": "jest ./test/test.js",
+    "test": "cross-env DB_ENV=testing jest --watch --verbose",
     "start": "nodemon index.js"
   },
   "repository": {
