--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.0",
     "pg": "^7.11.0",
-    "sqlite3": "^4.0.9",
-    "jest": "^23.6.0"
+    "sqlite3": "^4.0.9"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.17.3",
+    "jest": "^23.6.0",
     "knex-cleaner": "^1.2.1",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
